--- a/ITPARK.html
+++ b/ITPARK.html
@@ -38,7 +38,7 @@
 
     <section class="banner">
         <div class="logo">
-            <h1 class="dasturchilik"> DASTURCHILIK KELAJAK KASBI </h1> <br>
+            <h1 class="dasturchilik"> DSTURCHILIK KELAJAK KASBI </h1> <br>
             <h2 class="itcenter"> IT CENTER </h2>
         </div>
         <div id="bizhaqimizda"></div>
